--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "axios": "^1.8.3",
+    "bootstrap": "^5.3.3",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.10.9",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "sass": "^1.85.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
