--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.8.3",
+    "axios": "^0.26.1",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "react": "^17.0.2",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^17.0.2",
