reviews functionality completed

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DATABASE="mongodb://database:27017/TinyStepsDB" #docker use
-# DATABASE="mongodb://localhost:27017/TinyStepsDB" # dev use
+# DATABASE="mongodb://database:27017/TinyStepsDB" #docker use
+DATABASE="mongodb://localhost:27017/TinyStepsDB" # dev use
 PORT='8000'
 JWT=Pj1iLsR9BLWOghQzEtdEcR8vpSZez8Qt
