implemented email verification

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,8 @@
-DATABASE="mongodb://database:27017/TinyStepsDB" #docker use
-# DATABASE="mongodb://localhost:27017/TinyStepsDB" # dev use
+# DATABASE="mongodb://database:27017/TinyStepsDB" #docker use
+# MAIL="http://mail:8081" #docker use
+
+DATABASE="mongodb://localhost:27017/TinyStepsDB" # dev use
+MAIL="http://localhost:8081" #dev use
+FRONTEND="http://localhost:3000" #dev use
 PORT='8000'
 JWT=Pj1iLsR9BLWOghQzEtdEcR8vpSZez8Qt
