--- a/mail/.env
+++ b/mail/.env
@@ -1,3 +1,3 @@
-EMAIL=kokglenn15@gmail.com
-PASSWORD=iggy npff jbfy gnuk
+EMAIL=tinysteps.sc2006@gmail.com
+PASSWORD=jeqo qqbm nyzs ymux
 FRONTEND=http://localhost:3000
