--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,12 @@
-# DATABASE="mongodb://database:27017/TinyStepsDB" #docker use
-# MAIL="http://mail:8081" #docker use
+# DOCKER USE
+DATABASE="mongodb://database:27017/TinyStepsDB"
+MAIL="http://mail:8081"
+FRONTEND="http://localhost" 
 
-DATABASE="mongodb://localhost:27017/TinyStepsDB" # dev use
-MAIL="http://localhost:8081" #dev use
-FRONTEND="http://localhost:3000" #dev use
+# DEV USE
+# DATABASE="mongodb://localhost:27017/TinyStepsDB"
+# MAIL="http://localhost:8081"
+# FRONTEND="http://localhost:3000" 
 
 PORT='8000'
 JWT=Pj1iLsR9BLWOghQzEtdEcR8vpSZez8Qt
