--- a/backend/.env
+++ b/backend/.env
@@ -1,12 +1,13 @@
 # DOCKER USE
-DATABASE="mongodb://database:27017/TinyStepsDB"
-MAIL="http://mail:8081"
-FRONTEND="http://localhost" 
+# DATABASE="mongodb://database:27017/TinyStepsDB"
+# MAIL="http://mail:8081"
+# FRONTEND="http://localhost" 
 
 # DEV USE
 # DATABASE="mongodb://localhost:27017/TinyStepsDB"
-# MAIL="http://localhost:8081"
-# FRONTEND="http://localhost:3000" 
+DATABASE="mongodb+srv://user:Password@tinysteps.ewlkerv.mongodb.net/?retryWrites=true&w=majority&appName=TinySteps"
+MAIL="http://localhost:8081"
+FRONTEND="http://localhost:3000" 
 
 PORT='8000'
 JWT=Pj1iLsR9BLWOghQzEtdEcR8vpSZez8Qt
